--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Modal window</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-<button class="show-modal">Show modal 3</button>
+  testing
+</body>
 
 <script>
-const arr = [
-    [1, 2, 3],
-    [4, 5, 6],
-    [7, 8, 9]
-]
-for (let i = 0; i < arr.length; i++) {
-    for (let j = 0; j < arr[i].length; j++) {
-        console.log(`Points [${i}, ${j}] = ${arr[i][j]} `);
-        
-    }
-    
+  // Write a function that takes a string (a) as argument. Extract the first half a. Return the result
+function myFunction(...arrays) {
+  
+  return arrays.flat();
 }
+console.log(myFunction([1, 2, 3], [4, 5, 6], [8, 9, 10]));
+
+
 </script>
-</body>
 </html>
