--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
 // console.log(myFunction(['a','b','c'],[1,2,3]));
 
 
-function myFunction(obj) {
-      return Object.values(obj).reduce((a, b) => a + b)
-    }
+function myFunction(a, b) {
+  let obj = Object.values(a).forEach((val) => console.log(val * b))
+  console.log(obj, 'obj');
+  return (a);
+
+  // console.log(y['b'], 'y');
+}
   
-  console.log(myFunction({ e: 6, f: 4, b: 5, a: 3 }));
+  console.log(myFunction({a:1,b:2,c:3},3));
 
 </script>
 </html>
