--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function myFunction(obj) {
 
   return   typeof(obj) === Object ? true : false
 }
-  console.log(myFunction({a:1,b:2,c:3}));
+  console.log(myFunction(['I', 'need', 'candy']));
 
 </script>
 </html>
